--- a/.devcontainer/config.toml
+++ b/.devcontainer/config.toml
@@ -1,7 +1,7 @@
 # Can override the default connection name with an environment variable as follows
-#export SNOWFLAKE_DEFAULT_CONNECTION_NAME="default"
+#export SNOWFLAKE_DEFAULT_CONNECTION_NAME="totnopj-ju30958"
 
 # Only for Snow CLI, can override connection details as follows
-#export SNOWFLAKE_CONNECTIONS_DEFAULT_PASSWORD=""
+#export SNOWFLAKE_CONNECTIONS_DEFAULT_PASSWORD="W77Sbk4sZcARz8J"
 
-default_connection_name = "default"
+default_connection_name = "totnopj-ju30958"
